fix: ensure configuration loading and name resolution is resilient (#15943)
Signed-off-by: Nathan Klick <nathan@swirldslabs.com>
Signed-off-by: Lukáš Brilla <lukas.brilla.2@student.tuke.sk>